@@ -1,3 +1,7 @@
+Console-2.2.1-beta
+=============================================================
+- Added return result
+
 Console-2.2.0-beta
 =============================================================
 - Added execution report
